feat: add internal DR compute
